--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.3",
     "pytest>=8.3.5",
+    "python-dotenv>=1.1.0",
     "taskipy>=1.14.1",
 ]
 [tool.taskipy.tasks]
